<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="button_download">Download</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="choose_file_message">please choose file to download</string>
    <string name="glide_option">Glide - Image loading library by BumpTech</string>
    <string name="loadapp_option">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_option">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>


    <string name="glide_project_url">https://github.com/bumptech/glide/archive/master.zip</string>
    <string name="glide_download_description">Glide - Image Loading Library By BumpTech.zip</string>

    <string name="udacity_project_url">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="udacity_download_description">LoadApp - Current Repository By Udacity.zip</string>

    <string name="retrofit_project_url">https://github.com/square/retrofit/archive/master.zip</string>
    <string name="retrofit_download_description">Retrofit - Type-safe HTTP client for Android and Java By Square, Inc.zip</string>
    <string name="ok">OK</string>
    <string name="file_name">File name:</string>
    <string name="status_lable">Status:</string>
</resources>
